--- a/src/components/DataBlock/index.module.less
+++ b/src/components/DataBlock/index.module.less
@@ -9,14 +9,14 @@
   &-small {
     width: 180px;
     max-width: 180px;
-    background: url(./assets/small.png) no-repeat;
+    background: url('./assets/small.png') no-repeat;
     background-size: 100% 100%;
   }
 
   &-large {
     width: 363px;
     min-width: 363px;
-    background: url(./assets/large.png) no-repeat;
+    background: url('./assets/large.png') no-repeat;
     background-size: 100% 100%;
   }
 }
@@ -30,6 +30,7 @@
 
   &-label {
     white-space: nowrap;
+
     &::after {
       content: '\FF1A';
     }
@@ -38,10 +39,10 @@
   &-value {
     display: flex;
     align-items: center;
-    color: #ffffff;
+    color: #fff;
     font-weight: 700;
     font-size: 22px;
-    text-shadow: 0px 0px 8px #2fa9ff;
+    text-shadow: 0 0 8px #2fa9ff;
   }
 
   &-unit {
