--- a/src/g6/demo1/index.less
+++ b/src/g6/demo1/index.less
@@ -3,18 +3,21 @@
   padding: 10px 8px;
   color: #545454;
   font-size: 12px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(255 255 255 / 90%);
   border: 1px solid #e2e2e2;
   border-radius: 4px;
-  box-shadow: rgb(174, 174, 174) 0px 0px 10px;
+  box-shadow: rgb(174 174 174) 0 0 10px;
 }
 
 /* 使用 CSS 样式控制文字溢出隐藏 */
 .node-label {
   overflow: hidden;
+
   /* 溢出内容隐藏 */
   white-space: nowrap;
+
   /* 不换行 */
   text-overflow: ellipsis;
+
   /* 使用省略号表示溢出内容 */
 }
