--- a/src/components/LabelTag/index.module.less
+++ b/src/components/LabelTag/index.module.less
@@ -4,7 +4,7 @@
   display: block;
   height: 36px;
   padding: 0 6px;
-  color: #ffffff;
+  color: #fff;
   font-weight: 400;
   font-size: 14px;
   line-height: 36px;
