--- a/src/components/OutFlow/index.module.less
+++ b/src/components/OutFlow/index.module.less
@@ -5,7 +5,7 @@
   padding: 0 16px;
   font-family: PingFangSC, PingFangSC-Regular;
   column-gap: 9px;
-  background: rgba(0, 22, 56, 0.95);
+  background: rgb(0 22 56 / 95%);
   opacity: 0.95;
   row-gap: 5px;
 
