--- a/src/components/SwitchButton/index.less
+++ b/src/components/SwitchButton/index.less
@@ -3,7 +3,7 @@
   width: 200px;
   height: 64px;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgb(0 0 0 / 25%);
   border: 0;
   border-radius: 32px;
   transition: all 0.2s;
@@ -15,7 +15,7 @@
     height: 60px;
     background-color: #fff;
     border-radius: 50%;
-    box-shadow: 0 2px 4px 0 rgba(0, 35, 11, 0.2);
+    box-shadow: 0 2px 4px 0 rgb(0 35 11 / 20%);
     transition: all 0.2s ease-in-out;
     inset-inline-start: 2px;
   }
@@ -23,6 +23,7 @@
 
 .switch-button-checked {
   background-color: #fffee1;
+
   .switch-button-handle {
     inset-inline-start: calc(100% - 62px);
   }
