--- a/src/interaction/suspension/index.less
+++ b/src/interaction/suspension/index.less
@@ -4,29 +4,32 @@
   // align-items: center;
   width: 300px;
   height: 300px;
+
   .ball {
     width: 64px;
     height: 64px;
     background: linear-gradient(#fff, #9dbbdc);
     border-radius: 50%;
-    animation: ballSuspension 3s infinite;
+    animation: ball-suspension 3s infinite;
   }
 
   .platform {
     width: 150px;
     height: 150px;
-    box-shadow: 0 2px 4px 0 rgba(0, 35, 11, 0.2);
+    box-shadow: 0 2px 4px 0 rgb(0 35 11 / 20%);
     transform: rotateX(45deg);
     transform-origin: 0 100%;
   }
 
-  @keyframes ballSuspension {
+  @keyframes ball-suspension {
     0% {
       transform: translateY(0);
     }
+
     50% {
       transform: translateY(20px);
     }
+
     100% {
       transform: translateY(0);
     }
