--- a/src/components/VirtualTable/index.module.less
+++ b/src/components/VirtualTable/index.module.less
@@ -25,6 +25,7 @@
     text-overflow: ellipsis;
     background: #fff;
     border-bottom: 1px solid #e8e8e8;
+    white-space: nowrap;
   }
 
   [data-theme='dark'] &-cell {
@@ -34,5 +35,6 @@
     text-overflow: ellipsis;
     background: #141414;
     border-bottom: 1px solid #303030;
+    white-space: nowrap;
   }
 }
