--- a/src/TipSelect/index.module.less
+++ b/src/TipSelect/index.module.less
@@ -89,5 +89,13 @@
     width: 50%;
     padding: 8px;
     border: 1px solid #ced2de;
+
+    &-text {
+      font-weight: 600;
+    }
+  }
+
+  &-alert {
+    margin-bottom: 16px;
   }
 }
