--- a/src/TipSelect/index.module.less
+++ b/src/TipSelect/index.module.less
@@ -4,6 +4,9 @@
       > span {
         display: inline-block;
         width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
     }
   }
