--- a/src/EditTable/index.module.less
+++ b/src/EditTable/index.module.less
@@ -1,6 +1,14 @@
-.edit-table {
-  &-add {
-    width: 100%;
-    margin-top: 16px;
+.edit-table-add {
+  width: 100%;
+  margin-top: 16px;
+}
+
+.edit-table-row {
+  > td {
+    vertical-align: top;
   }
+}
+
+.edit-table-operation-editing {
+  height: 32px;
 }
