--- a/src/TreeToTable/index.module.less
+++ b/src/TreeToTable/index.module.less
@@ -47,6 +47,9 @@
 
       .@{ant-prefix}-tree-node-content-wrapper {
         flex: 1;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       &-treenode-checkbox-checked {
