--- a/src/FormRender/demos/components/Block/index.module.less
+++ b/src/FormRender/demos/components/Block/index.module.less
@@ -14,3 +14,32 @@
     column-gap: 8px;
   }
 }
+
+.block-title {
+  &-title {
+    position: relative;
+    margin-right: 8px;
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+
+    &::before {
+      @top: 3px;
+
+      content: '';
+      position: absolute;
+      top: @top;
+      left: 0;
+      height: calc(100% - 2 * @top);
+      width: 6px;
+      border-radius: 6px;
+      background: #3385ff;
+    }
+  }
+
+  &-desc {
+    font-size: 14px;
+    color: #afb5c7;
+  }
+}
