--- a/src/FormRender/demos/components/Card/index.module.less
+++ b/src/FormRender/demos/components/Card/index.module.less
@@ -1,4 +1,4 @@
-.block {
+.card {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,7 +15,7 @@
   }
 }
 
-.block-title {
+.card-title {
   &-title {
     position: relative;
     margin-right: 8px;
