feat: 样式再优化

--- a/src/TipSelect/mutiple.module.less
+++ b/src/TipSelect/mutiple.module.less
@@ -124,7 +124,7 @@
 
   &-templates {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     &-separate {
       width: @separateWith;
