feat: 组件文档补充

--- a/src/TreeToTable/index.module.less
+++ b/src/TreeToTable/index.module.less
@@ -14,6 +14,18 @@
   }
 
   &-left {
+    :global {
+      .@{ant-prefix}-tree-list {
+        .@{ant-prefix}-tree-treenode {
+          padding-left: 5px;
+
+          .@{ant-prefix}-tree-switcher {
+            display: block;
+          }
+        }
+      }
+    }
+
     &-tree-align-checkbox {
       :global {
         .@{ant-prefix}-tree-list {
