--- a/src/SelectTable/SelectList.module.less
+++ b/src/SelectTable/SelectList.module.less
@@ -9,15 +9,25 @@
   }
 
   li.select-list-item {
-    display: flex;
+    display: block;
+    width: 100%;
     height: 24px;
     line-height: 24px;
     margin: 0;
     padding: 0 4px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
   }
 
-  .select-list-item-selected {
-    background: skyblue;
+  li.select-list-item:hover {
+    background: #f5f5f5;
+  }
+
+  .select-list-item-selected,
+  .select-list-item-selected.select-list-item:hover {
+    background: #bae7ff;
   }
 
   .select-list-item-checkbox {
@@ -35,6 +45,12 @@
 
           .@{ant-prefix}-tree-switcher {
             display: none;
+          }
+
+          .@{ant-prefix}-tree-node-content-wrapper {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
           }
         }
       }
