--- a/src/SelectTable/index.module.less
+++ b/src/SelectTable/index.module.less
@@ -2,6 +2,15 @@
   display: flex;
 
   &-left {
-    display: flex;
+    flex: 1;
+
+    &-lists {
+      display: flex;
+    }
+  }
+
+  &-right {
+    flex: 1;
+    width: 300px;
   }
 }
