feat: 支持默认选中第一项的功能

--- a/src/SelectTable/SelectList.module.less
+++ b/src/SelectTable/SelectList.module.less
@@ -1,6 +1,6 @@
 .select-list {
   &-input {
-    padding: 12px 12px 0;
+    padding: 12px 12px 4px;
   }
 
   :global {
@@ -65,6 +65,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+            width: 100%;
           }
         }
       }
