--- a/src/SelectTable/SelectList.module.less
+++ b/src/SelectTable/SelectList.module.less
@@ -3,6 +3,29 @@
     padding: 12px 12px 4px;
   }
 
+  .select-list-item-wrap {
+    display: flex;
+    align-items: center;
+    padding-bottom: 4px;
+  }
+
+  li.select-list-item {
+    display: flex;
+    width: 100%;
+    height: 24px;
+    line-height: 24px;
+    margin: 0;
+    padding: 0 4px;
+    cursor: pointer;
+
+    > span:nth-of-type(1) {
+      flex: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+
   :global {
     .@{ant-prefix}-list {
       &-items {
@@ -15,25 +38,10 @@
         border-top: 1px solid #ced2de;
       }
     }
-  }
 
-  .select-list-item-wrap {
-    display: flex;
-    align-items: center;
-    padding-bottom: 4px;
-  }
-
-  li.select-list-item {
-    display: block;
-    width: 100%;
-    height: 24px;
-    line-height: 24px;
-    margin: 0;
-    padding: 0 4px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    cursor: pointer;
+    .@{ant-prefix}-checkbox-wrapper + .@{ant-prefix}-list-item {
+      width: calc(100% - 16px);
+    }
   }
 
   li.select-list-item:hover {
@@ -62,10 +70,24 @@
           }
 
           .@{ant-prefix}-tree-node-content-wrapper {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
             width: 100%;
+
+            .@{ant-prefix}-tree-title {
+              display: flex;
+
+              > span:nth-of-type(1) {
+                display: block;
+                flex: 1;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+              }
+            }
+          }
+
+          .@{ant-prefix}-tree-checkbox
+            + .@{ant-prefix}-tree-node-content-wrapper {
+            width: calc(100% - 24px);
           }
         }
       }
