--- a/src/SelectTable/SelectList.module.less
+++ b/src/SelectTable/SelectList.module.less
@@ -84,6 +84,7 @@
 
             .@{ant-prefix}-tree-title {
               display: flex;
+              align-items: center;
 
               > span:nth-of-type(1) {
                 display: block;
@@ -105,10 +106,10 @@
   }
 
   &-status-box {
-    font-size: 12px;
+    font-size: 10px;
     padding: 2px 4px;
-    height: 24px;
-    line-height: 20px;
+    height: 20px;
+    line-height: 16px;
     border: 1px solid;
     border-radius: 2px;
   }
