--- a/src/SelectTable/SelectTree.module.less
+++ b/src/SelectTable/SelectTree.module.less
@@ -1,65 +1,8 @@
-.select-list {
-  &-input {
-    padding: 12px 12px 4px;
-  }
-
-  .select-list-item-wrap {
+.select-tree {
+  .select-tree-item-wrap {
     display: flex;
     align-items: center;
     padding-bottom: 4px;
-  }
-
-  li.select-list-item {
-    display: flex;
-    width: 100%;
-    height: 24px;
-    line-height: 24px;
-    margin: 0;
-    padding: 0 4px;
-    cursor: pointer;
-
-    > span:nth-of-type(1) {
-      flex: 1;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-  }
-
-  :global {
-    .@{ant-prefix}-list {
-      &-items {
-        padding: 0 12px;
-      }
-
-      &-pagination {
-        margin-top: 0;
-        padding-top: 8px;
-        border-top: 1px solid #ced2de;
-      }
-    }
-
-    .@{ant-prefix}-checkbox-wrapper + .@{ant-prefix}-list-item {
-      width: calc(100% - 16px);
-    }
-  }
-
-  li.select-list-item:not(.select-list-item-disabled):hover {
-    background: #f5f5f5;
-  }
-
-  li.select-list-item-disabled {
-    color: rgb(0 0 0 / 25%);
-    cursor: not-allowed;
-  }
-
-  .select-list-item-selected:not(.select-list-item-disabled),
-  .select-list-item-selected.select-list-item:not(.select-list-item-disabled):hover {
-    background: #bae7ff;
-  }
-
-  .select-list-item-checkbox {
-    margin-right: 8px;
   }
 
   &-tree {
@@ -113,5 +56,12 @@
     border: 1px solid;
     border-radius: 2px;
     margin-left: 4px;
+  }
+
+  &-pagination {
+    margin-top: 0;
+    padding: 8px 0;
+    border-top: 1px solid #ced2de;
+    text-align: right;
   }
 }
